--- a/previews/BEE.html
+++ b/previews/BEE.html
@@ -377,7 +377,7 @@
 			<div class="container"><img alt="/sets\BEE-files\img\41_Veteran Vanguard.png" id="41_Veteran Vanguard" data-flag="@X" onclick="openSidebar('41_Veteran Vanguard',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\85_Tireless Librarian.png" id="85_Tireless Librarian" data-flag="@X" onclick="openSidebar('85_Tireless Librarian',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\129_Sucker Punch.png" id="129_Sucker Punch" data-flag="@X" onclick="openSidebar('129_Sucker Punch',false)"></div>
-			<div class="container"><img alt="/sets\BEE-files\img\173_Tyrant's Roar.png" id="173_Tyrants Roar" data-flag="@X" onclick="openSidebar('173_Tyrants Roar',false)"></div>
+			<div class="container"><img alt="/sets\BEE-files\img\173_Tyrant's Roar.png" id="173_Tyrants Roar" data-flag="@N" onclick="openSidebar('173_Tyrants Roar',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\217_Tidal Hierarch.png" id="217_Tidal Hierarch" data-flag="@X" onclick="openSidebar('217_Tidal Hierarch',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\42_Vura, Enduring Enchantress.png" id="42_Vura, Enduring Enchantress" data-flag="@X" onclick="openSidebar('42_Vura, Enduring Enchantress',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\86_Twinfang Duelist.png" id="86_Twinfang Duelist" data-flag="@X" onclick="openSidebar('86_Twinfang Duelist',false)"></div>
