--- a/previews/BEE.html
+++ b/previews/BEE.html
@@ -359,7 +359,7 @@
 			<div class="container"><img alt="/sets\BEE-files\img\129_Right Hook.png" id="129_Right Hook" data-flag="@X" onclick="openSidebar('129_Right Hook',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\175_Splintering Sprinter.png" id="175_Splintering Sprinter" data-flag="@X" onclick="openSidebar('175_Splintering Sprinter',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\221_Rootpath Wanderer.png" id="221_Rootpath Wanderer" data-flag="@X" onclick="openSidebar('221_Rootpath Wanderer',false)"></div>
-			<div class="container"><img alt="/sets\BEE-files\img\38_Territiorial Felidar.png" id="38_Territiorial Felidar" data-flag="@X" onclick="openSidebar('38_Territiorial Felidar',false)"></div>
+			<div class="container"><img alt="/sets\BEE-files\img\38_Territorial Felidar.png" id="38_Territorial Felidar" data-flag="@X" onclick="openSidebar('38_Territorial Felidar',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\84_Sweet Dreams.png" id="84_Sweet Dreams" data-flag="@X" onclick="openSidebar('84_Sweet Dreams',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\130_Ritual Preparations.png" id="130_Ritual Preparations" data-flag="@X" onclick="openSidebar('130_Ritual Preparations',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\176_Stray Squire.png" id="176_Stray Squire" data-flag="@X" onclick="openSidebar('176_Stray Squire',false)"></div>
@@ -378,7 +378,7 @@
 			<div class="container"><img alt="/sets\BEE-files\img\87_Three Card Bluff.png" id="87_Three Card Bluff" data-flag="@X" onclick="openSidebar('87_Three Card Bluff',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\133_Shambling Return.png" id="133_Shambling Return" data-flag="@X" onclick="openSidebar('133_Shambling Return',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\179_Temple of Malignant Rage.png" id="179_Temple of Malignant Rage" data-flag="@X" onclick="openSidebar('179_Temple of Malignant Rage',false)"></div>
-			<div class="container"><img alt="/sets\BEE-files\img\225_Terraformer Frog.png" id="225_Terraformer Frog" data-flag="@X" onclick="openSidebar('225_Terraformer Frog',false)"></div>
+			<div class="container"><img alt="/sets\BEE-files\img\225_Terraformer Toad.png" id="225_Terraformer Toad" data-flag="@X" onclick="openSidebar('225_Terraformer Toad',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\42_Vengeant Paladin.png" id="42_Vengeant Paladin" data-flag="@X" onclick="openSidebar('42_Vengeant Paladin',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\88_Tireless Librarian.png" id="88_Tireless Librarian" data-flag="@X" onclick="openSidebar('88_Tireless Librarian',false)"></div>
 			<div class="container"><img alt="/sets\BEE-files\img\134_Subservient Skeleton.png" id="134_Subservient Skeleton" data-flag="@X" onclick="openSidebar('134_Subservient Skeleton',false)"></div>
