--- a/all-sets.html
+++ b/all-sets.html
@@ -102,6 +102,13 @@
 				<div>BEE</div>
 				<div>360</div>
 			</a>
+			
+			<a href="/sets/XMAS" class="set-row"> 
+				<img src="/sets/XMAS-files/icon.png">
+				<div class="set-title"></div>
+				<div>XMAS</div>
+				<div>47</div>
+			</a>
 			</div>
 		
 	<script>
