--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
 									<a href="previews/BEE"><div class="set-icon"><img src="sets/BEE-files/icon.png" title="Bee Cube"></img></div>
 									<div class="set-icon-name">Bee Cube</div></a>
 								</div>
+				<div class="set-icon-container">
+									<a href="previews/XMAS"><div class="set-icon"><img src="sets/XMAS-files/icon.png" title=""></img></div>
+									<div class="set-icon-name"></div></a>
+								</div>
 									</div>
 		
 				</div>
