--- a/previews/BEE.html
+++ b/previews/BEE.html
@@ -176,6 +176,7 @@
 	<img class="preload-hidden" src="/img/dot.png" />
 	<img class="preload-hidden" src="/sets/BEE-files/logo.png" />
 	<img class="preload-hidden" src="/sets/BEE-files/icon.png" />
+		<img class="preload-hidden" src="/sets/XMAS-files/icon.png" />
 		<div class="header">
 		<div class="search-grid">
 			<a href="/"><img class="sg-logo" src="/img/banner.png"></a>
@@ -190,6 +191,8 @@
 	<div class="dropdown" onmouseenter="rolldown()" onmouseleave="rollup()">
 	
 		<a class="set-bar" href="BEE"><img src="/sets/BEE-files/icon.png">Bee Cube</a>
+	
+		<a class="set-bar inactive" href="XMAS"><img src="/sets/XMAS-files/icon.png"></a>
 	
 		</div>
 		<div class="banner">
